tests/baselines/reference/APISample_watcher.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8907,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8907,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9167,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9167,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9517,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9517,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9541,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9628,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10792,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10792,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10803,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10803,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10813,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10813,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10888,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10888,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10999,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10999,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11019,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11019,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11029,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11029,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11063,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11063,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11066,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11066,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11088,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11088,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11114,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11114,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11117,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11117,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11159,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11159,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11193,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11193,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11204,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11204,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11228,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11228,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11236,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11236,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11240,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11240,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11270,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11270,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11313,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11313,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11500,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11500,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11502,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11502,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11508,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11508,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11510,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11510,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11649,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11649,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11651,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11651,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11653,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11653,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11729,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11729,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_watcher.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The sample sources can be found
             at: https://github.com/Microsoft/TypeScript/wiki/Using-the-Compiler-API#incremental-build-support-using-the-language-services
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var process: any;
    declare var console: any;
    declare var fs: {
        existsSync(path: string): boolean;
        readdirSync(path: string): string[];
        readFileSync(filename: string, encoding?: string): string;
        writeFileSync(filename: string, data: any, options?: { encoding?: string; mode?: number; flag?: string; } | string): void;
        watchFile(filename: string, options: { persistent?: boolean; interval?: number; }, listener: (curr: { mtime: Date }, prev: { mtime: Date }) => void): void;
    };
    declare var path: any;
    
    import * as ts from "typescript";
    
    function watch(rootFileNames: string[], options: ts.CompilerOptions) {
        const files: ts.MapLike<{ version: number }> = {};
    
        // initialize the list of files
        rootFileNames.forEach(fileName => {
            files[fileName] = { version: 0 };
        });
    
        // Create the language service host to allow the LS to communicate with the host
        const servicesHost: ts.LanguageServiceHost = {
            getScriptFileNames: () => rootFileNames,
            getScriptVersion: (fileName) => files[fileName] && files[fileName].version.toString(),
            getScriptSnapshot: (fileName) => {
                if (!fs.existsSync(fileName)) {
                    return undefined;
                }
    
                return ts.ScriptSnapshot.fromString(fs.readFileSync(fileName).toString());
            },
            getCurrentDirectory: () => process.cwd(),
            getCompilationSettings: () => options,
            getDefaultLibFileName: (options) => ts.getDefaultLibFilePath(options),
        };
    
        // Create the language service files
        const services = ts.createLanguageService(servicesHost, ts.createDocumentRegistry())
    
        // Now let's watch the files
        rootFileNames.forEach(fileName => {
            // First time around, emit all files
            emitFile(fileName);
    
            // Add a watch on the file to handle next change
            fs.watchFile(fileName,
                { persistent: true, interval: 250 },
                (curr, prev) => {
                    // Check timestamp
                    if (+curr.mtime <= +prev.mtime) {
                        return;
                    }
    
                    // Update the version to signal a change in the file
                    files[fileName].version++;
    
                    // write the changes to disk
                    emitFile(fileName);
                });
        });
    
        function emitFile(fileName: string) {
            let output = services.getEmitOutput(fileName);
    
            if (!output.emitSkipped) {
                console.log(`Emitting ${fileName}`);
            }
            else {
                console.log(`Emitting ${fileName} failed`);
                logErrors(fileName);
            }
    
            output.outputFiles.forEach(o => {
                fs.writeFileSync(o.name, o.text, "utf8");
            });
        }
    
        function logErrors(fileName: string) {
            let allDiagnostics = services.getCompilerOptionsDiagnostics()
                .concat(services.getSyntacticDiagnostics(fileName))
                .concat(services.getSemanticDiagnostics(fileName));
    
            allDiagnostics.forEach(diagnostic => {
                let message = ts.flattenDiagnosticMessageText(diagnostic.messageText, "\n");
                if (diagnostic.file) {
                    let { line, character } = diagnostic.file.getLineAndCharacterOfPosition(diagnostic.start!);
                    console.log(`  Error ${diagnostic.file.fileName} (${line + 1},${character + 1}): ${message}`);
                }
                else {
                    console.log(`  Error: ${message}`);
                }
            });
        }
    }
    
    // Initialize files constituting the program as all .ts files in the current directory
    const currentDirectoryFiles = fs.readdirSync(process.cwd()).
        filter(fileName=> fileName.length >= 3 && fileName.substr(fileName.length - 3, 3) === ".ts");
    
    // Start the watcher
    watch(currentDirectoryFiles, { module: ts.ModuleKind.CommonJS });
    